--- a/docs/paper/paper.bib
+++ b/docs/paper/paper.bib
@@ -31,13 +31,13 @@
   publisher={JSTOR}
 }
 
-@book{EoNbook,
-title = {Mathematics of Epidemics on Networks: from Exact to Approximate Models},
-author = {Kiss, Istvan Z and Miller, Joel C and Simon, P{\'e}ter L},
-year={Forthcoming},
-publisher = {Springer}
+@book{kiss:EoN,
+  title={Mathematics of epidemics on networks: from exact to approximate models},
+  author={Kiss, Istvan Z and Miller, Joel C and Simon, P{\'e}ter L},
+publisher = {Springer},
+series = {IAM},
+  year={2017}
 }
-
 @article{gillespie1977exact,
 	Author = {Gillespie, D. T.},
 	Date-Added = {2014-02-08 09:17:11 +0000},
